--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
