--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.5.2",
     "mongoose": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
