--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,14 +16,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.5.2",
+    "framer-motion": "^10.16.5",
     "lucide-react": "^0.292.0",
     "mongoose": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
